--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
    "files.autoSave": "off",
    "workbench.colorTheme": "Visual Studio Dark",
    "editor.defaultFormatter": "HookyQR.beautify",
-   "python.formatting.provider": "black"
+   "python.formatting.provider": "black",
+   "[python]": {
+      "editor.defaultFormatter": "ms-python.python"
+   }
 }
