--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,4 +27,7 @@
    "[python]": {
       "editor.defaultFormatter": "ms-python.python"
    }
+   "workbench.editorAssociations": {
+    "*.wav": "wavPreview.audioPreview"
+   }
 }
