--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
    "python.linting.pylintEnabled": true,
+   "WavPreview.autoPlay": true,
+   "WavPreview.autoAnalyze": true,
    "python.linting.enabled": true,
    "python.linting.pep8Enabled": false,
    "python.linting.flake8Enabled": true,
