Radio buttons for each note displaying

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,7 @@
       "editor.defaultFormatter": "ms-python.python"
    },
    "workbench.editorAssociations": {
-    "*.wav": "wavPreview.audioPreview"
+      "*.wav": "wavPreview.audioPreview"
    },
+   "python.analysis.typeCheckingMode": "basic",
 }
