--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-Flask==2.2.2
-Flask_PyMongo==2.3.0
-playsound==1.2.2
+click==8.1.3
+colorama==0.4.6
+dnspython==2.3.0
+Flask==2.2.3
+Flask-PyMongo==2.3.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+playsound==1.3.0
 pymongo==4.3.3
+Werkzeug==2.2.3
